[gd_scene load_steps=34 format=3 uid="uid://ck0n3e7m71aoy"]

[ext_resource type="Script" uid="uid://btgg6ulu6in8t" path="res://framework/title_screen.gd" id="1_f6akd"]
[ext_resource type="PackedScene" uid="uid://1ju8eyujir3q" path="res://framework/models/monitor.glb" id="1_m3mpr"]
[ext_resource type="Theme" uid="uid://fdu16ilqs3a5" path="res://assets/themes/terminal.tres" id="3_4toer"]
[ext_resource type="FontFile" uid="uid://cuoy0amwy2mxc" path="res://assets/fonts/VT323/VT323-Regular.ttf" id="3_th5dg"]
[ext_resource type="ArrayMesh" uid="uid://cr7acoty3n02c" path="res://framework/models/mate.obj" id="4_sndid"]
[ext_resource type="Texture2D" uid="uid://44wlppmlhhw5" path="res://assets/logos/logo.png" id="5_4xr2k"]
[ext_resource type="Shader" uid="uid://7ojoo23teqvk" path="res://framework/shaders/glass.tres" id="5_vromf"]
[ext_resource type="Shader" uid="uid://duxxqg2h0syth" path="res://framework/shaders/mate.tres" id="6_0qgvj"]
[ext_resource type="Theme" uid="uid://dhp67pf748w06" path="res://assets/themes/notepad.tres" id="6_7jn8m"]
[ext_resource type="AudioStream" uid="uid://cfr43x8eu62vi" path="res://assets/sounds/GPN23MainTheme.mp3" id="9_yy6u4"]

[sub_resource type="Environment" id="Environment_0qgvj"]
background_energy_multiplier = 10.0
ambient_light_color = Color(0.944169, 0.797791, 0.702215, 1)
ambient_light_energy = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6akd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_th5dg"]
line_spacing = 2.0
font = ExtResource("3_th5dg")
font_size = 32
font_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_size = 2
shadow_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_th5dg"]
bg_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_color = Color(0.258552, 0.668512, 0.157625, 1)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4toer"]
bg_color = Color(0, 0, 0, 0)
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sndid"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vromf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0qgvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4toer"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4xr2k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yy6u4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jn8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekofo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2bbnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmn24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xr2k"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.258552, 0.668512, 0.157625, 1)

[sub_resource type="QuadMesh" id="QuadMesh_sndid"]
size = Vector2(0.12, 0.12)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th5dg"]
resource_local_to_scene = true
albedo_color = Color(0.80207, 0.329843, 0.140212, 1)
emission = Color(0.80207, 0.329843, 0.140212, 1)
emission_energy_multiplier = 3.0
emission_operator = 1

[sub_resource type="QuadMesh" id="QuadMesh_vromf"]
size = Vector2(100, 100)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sndid"]
albedo_color = Color(0.313146, 0.174428, 0.0210792, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4xr2k"]
render_priority = 0
shader = ExtResource("5_vromf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4toer"]
render_priority = 0
shader = ExtResource("6_0qgvj")

[sub_resource type="CylinderMesh" id="CylinderMesh_vromf"]
material = SubResource("ShaderMaterial_4toer")
top_radius = 0.54
bottom_radius = 0.54
height = 1.8

[node name="TitleScreen" type="Node3D"]
script = ExtResource("1_f6akd")
PRINT_TIMEOUT = 0.01
TERM_W = 38
TERM_H = 14

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.173648, 0.984808, 0, 0.984808, 0.173648, -1, 7.59039e-09, -4.30473e-08, 7.32191, 2.65801, 0)
projection = 1
size = 2.26

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0qgvj")

[node name="Monitor" parent="." instance=ExtResource("1_m3mpr")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, 0)

[node name="ScreenLayer" type="CanvasLayer" parent="Monitor"]

[node name="Screen" type="Panel" parent="Monitor/ScreenLayer"]
offset_right = 512.0
offset_bottom = 512.0
theme = ExtResource("3_4toer")
theme_override_styles/panel = SubResource("StyleBoxFlat_f6akd")

[node name="Label" type="Label" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 504.0
text = "HÃ¤ckerspiele"
label_settings = SubResource("LabelSettings_th5dg")

[node name="CursorRect" type="Panel" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 0
offset_right = 13.0
offset_bottom = 5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_th5dg")

[node name="PoweroffButton" type="Button" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 0
offset_left = 421.0
offset_top = 621.0
offset_right = 461.0
offset_bottom = 671.0
tooltip_text = "Exit Game"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_4toer")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_sndid")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vromf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0qgvj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4toer")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4xr2k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yy6u4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_7jn8m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ekofo")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2bbnd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fmn24")

[node name="BlinkTimer" type="Timer" parent="Monitor/ScreenLayer/Screen"]
wait_time = 0.3
autostart = true

[node name="Logo" type="PanelContainer" parent="Monitor/ScreenLayer/Screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 13.0
offset_right = 40.0
offset_bottom = 109.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xr2k")

[node name="TextureRect" type="TextureRect" parent="Monitor/ScreenLayer/Screen/Logo"]
layout_mode = 2
texture = ExtResource("5_4xr2k")
expand_mode = 3
stretch_mode = 5

[node name="LineEdit" type="LineEdit" parent="Monitor/ScreenLayer/Screen"]
visible = false
layout_mode = 0
offset_left = 232.0
offset_top = 400.0
offset_right = 274.562
offset_bottom = 427.0
theme = ExtResource("3_4toer")
max_length = 20
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Label" type="Label" parent="Monitor/ScreenLayer"]
offset_left = -171.0
offset_top = 554.0
offset_right = 207.0
offset_bottom = 773.0
theme = ExtResource("6_7jn8m")
text = "Controls:
Movement: WASD / D-pad
Submit: Space / Enter / Bottom Button"

[node name="MarkerTopLeft" type="Marker3D" parent="Monitor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.732, 2.73, 0.93)

[node name="MarkerTopRight" type="Marker3D" parent="Monitor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.731967, 2.73035, 0.93)

[node name="MarkerBottomRight" type="Marker3D" parent="Monitor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.732, 1.508, 0.93)

[node name="PoweroffButton" type="MeshInstance3D" parent="Monitor"]
transform = Transform3D(1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 0.529363, 1.20559, 0.998548)
mesh = SubResource("QuadMesh_sndid")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_th5dg")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.28281, 3.92547, 1.97244)
light_energy = 5.115
omni_range = 10.0

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.71499, 0.982625, -2.08091)
light_energy = 0.8
omni_range = 10.0

[node name="Tisch" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.371036, 0)
mesh = SubResource("QuadMesh_vromf")
surface_material_override/0 = SubResource("StandardMaterial3D_sndid")

[node name="Mate" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.0446442, 0, -0.528116, 0, 0.53, 0, 0.528116, 0, -0.0446442, 2.35392, 0.42596, 1.58301)
mesh = ExtResource("4_sndid")
surface_material_override/0 = SubResource("ShaderMaterial_4xr2k")

[node name="MateInhalt" type="MeshInstance3D" parent="Mate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.363, 0)
mesh = SubResource("CylinderMesh_vromf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_yy6u4")
autoplay = true
bus = &"Music"

[connection signal="mouse_entered" from="Monitor/ScreenLayer/Screen/PoweroffButton" to="." method="_on_poweroff_button_mouse_entered"]
[connection signal="mouse_exited" from="Monitor/ScreenLayer/Screen/PoweroffButton" to="." method="_on_poweroff_button_mouse_exited"]
[connection signal="pressed" from="Monitor/ScreenLayer/Screen/PoweroffButton" to="." method="_on_poweroff_button_pressed"]
[connection signal="timeout" from="Monitor/ScreenLayer/Screen/BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="text_changed" from="Monitor/ScreenLayer/Screen/LineEdit" to="." method="_on_line_edit_text_changed"]
